Action to automatically flake8 the code

--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -21,6 +21,7 @@ jobs:
         pip install flake8 autopep8
 
     - name: Run flake8
+      continue-on-error: true
       run: |
         flake8 .
 
