--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -3,7 +3,7 @@ name: Lint and Fix
 on: [push, pull_request]
 
 jobs:
-  lint:
+  autostyle:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,12 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 autopep8
-
-    - name: Run flake8
-      continue-on-error: true
-      run: |
-        flake8 .
+        pip install autopep8
 
     - name: Run autopep8
       run: |
@@ -38,3 +33,25 @@ jobs:
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: autostyle
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+
+    - name: Run flake8
+      run: |
+        flake8 .
