--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -18,13 +18,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install autoflake autopep8
+        pip install autoflake vulture autopep8
 
-    - name: Run autoflake
+    - name: Run autoflake to remove unused imports
       run: |
         autoflake --in-place --remove-all-unused-imports --recursive .
 
-    - name: Run autopep8
+    - name: Run vulture to detect unused code
+      run: |
+        vulture . --min-confidence 50
+
+    - name: Run autopep8 to format the code
       run: |
         autopep8 --in-place --aggressive --aggressive --recursive . --max-line-length 180 --select W293
 
@@ -33,7 +37,7 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
-        git diff-index --quiet HEAD || git commit -m 'Automatically fix code style issues with autopep8'
+        git diff-index --quiet HEAD || git commit -m 'Automatically fix code style issues'
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
