--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Pull latest changes
+      run: git pull
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
