--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,7 +1,7 @@
 name: Auto-approve and merge Dependabot PRs
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - synchronize
