Fix for dependabot

--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -44,6 +44,6 @@ jobs:
 
       - name: Enable auto-merge
         if: ${{ steps.find_pr.outputs.PR_NUMBER != '' }}
-        run: gh pr merge --auto --squash "$PR_NUMBER"
+        run: gh pr merge --auto --squash "${{ steps.find_pr.outputs.PR_NUMBER }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
