--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,21 @@ jobs:
         run: |
           python -m twine upload dist/*
 
-      
+
+      - name: Extract latest release notes
+        id: get_release_notes
+        run: |
+          TAG=${{ github.ref_name }}  # Get the current tag (e.g., 1.2.0)
+          sed -n "/## \[${TAG}\]/,/## \[/p" CHANGELOG.md | sed '$d' | tail -n +3 > release_notes.txt
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          body_path: release_notes.txt  # This is where the file is referenced
+          draft: false
+          prerelease: false
