--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,13 +57,10 @@ jobs:
     needs: [publish]
     runs-on: ubuntu-latest
     steps:
-      - name: Extract tag
-        id: extract_tag
-        run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: "nanosaur-cli **${{ steps.extract_tag.outputs.tag }}** has been deployed!\nTo install follow the documentation: https://nanosaur.ai"
+          args: "nanosaur-cli **${{ github.ref_name }}** has been deployed!\nTo install follow the documentation: https://nanosaur.ai"
