--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Publish Python Package
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+(-*.*)?"  # Trigger when a tag with format X.X.X(-xxx0) is pushed
+      - "*.*.*"  # Trigger when a tag with format X.X.X(-xxx0) is pushed
 
 jobs:
   publish:
